--- a/css/style.css
+++ b/css/style.css
@@ -71,8 +71,8 @@
   margin-left:auto;
   margin-right:auto;
   margin-bottom: 10px;
-  width: 75px;
-  height: 75px;
+  max-width: 75px;
+  max-height: 75px;
 }
 
 img.RandBlock {
