--- a/css/style.css
+++ b/css/style.css
@@ -308,3 +308,8 @@ img.advtImageThumb.v2 {
     width: 100%;
     margin-top: 2px;
 }
+.advtFullDescrip.v2 {
+    clear:both;
+    margin-bottom: 15px;
+}
+
