--- a/css/style.css
+++ b/css/style.css
@@ -6,6 +6,23 @@
   color: red;
 }
 
+li.adlistItem a {
+    color: inherit;
+    text-decoration:none;
+}
+
+/* Style for the add item in the list */
+div.adlistItem {
+  cursor: pointer;
+  position:relative;
+  border: 2px solid #ddd;
+  border-radius: 10px;
+  -moz-border-radius: 10px;
+  -webkit-border-radius: 10px;
+  width: 100%;
+  height: 100%;
+}
+
 /* Styles for the category box displays */
 .adcat {
   position:relative;
@@ -313,3 +330,6 @@ img.advtImageThumb.v2 {
     margin-bottom: 15px;
 }
 
+form#adlistopts h4 {
+    margin-bottom: 2px;
+}
