--- a/css/style.css
+++ b/css/style.css
@@ -6,6 +6,9 @@
   color: red;
 }
 
+li.adlistItem {
+    padding-bottom:10px;
+}
 li.adlistItem a {
     color: inherit;
     text-decoration:none;
@@ -21,6 +24,12 @@ div.adlistItem {
   -webkit-border-radius: 10px;
   width: 100%;
   height: 100%;
+}
+div.adlistItem div.adtype {
+  border-radius: 10px 10px 0px 0px;
+  -moz-border-radius: 10px 10px 0px 0px;
+  -webkit-border-radius: 10px 10px 0px 0px;
+  width: 100%;
 }
 
 /* Styles for the category box displays */
@@ -332,4 +341,7 @@ img.advtImageThumb.v2 {
 
 form#adlistopts h4 {
     margin-bottom: 2px;
+}
+form#adlistopts div.uk-form-controls label{
+    font-weight:inherit;
 }
